[tool.poetry]
name = "ethical-algorithm"
version = "0.1.0"
description = "This is an example of how the ethical algorithm (detailed in the poster) could look, however, it is not complete."
authors = ["willswats <william@williamwatson.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"graphics.py" = "^5.0.1.post1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle (Error)
  "W",   # pycodestyle (Warning)
  "N",   # pep8-naming
  "I",   # isort
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "RUF", # Ruf-specific rules
]
line-length = 79
